--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,7 @@
-bcrypt==3.1.7
-blinker==1.4
-cffi==1.14.0
-click==7.1.2
-cryptography==2.9.2
-dnspython==1.16.0
-email-validator==1.1.0
-filelock==3.0.12
-Flask==1.1.2
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.4.1
-Flask-User==1.0.2.2
-Flask-WTF==0.14.3
-idna==2.9
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-passlib==1.7.2
-pycparser==2.20
-pyinotify==0.9.6
-python-ffmpeg-video-streaming==0.1.5
-six==1.14.0
-SQLAlchemy==1.3.17
-Werkzeug==1.0.1
-WTForms==2.3.1
+email-validator
+flask
+Flask-SQLAlchemy
+Flask-User
+gunicorn
+python-ffmpeg-video-streaming
+redis
