--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,30 @@
 version: '3'
 services:
+  # Flask application
   web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
+    build: .
+    expose:
+      - "8000"
+
+  # Redis, cache used by Flask
   redis:
     image: "redis:alpine"
+
+  # Nginx, reverse proxy, provides SSDL  
   nginx:
-    image: "nginx:alpine"
+    build: ./nginx
+    ports: 
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - web
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+
+  # Certbot, provides a LetsEncrypt certificate
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
