--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,33 +3,19 @@ upstream flask_application {
 }
 
 server {
-    listen 80;
-    server_name play.ashtonoh.ms;
+    listen      443 ssl;
+    server_name ${FQDN};
 
-    # https redirect
+    ssl_certificate     /etc/letsencrypt/live/${FQDN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${FQDN}/privkey.pem;
+
     location / {
-        return 301 https://$host$request_uri;
-    }
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        proxy_pass http://flask_application;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 }
-
-# server {
-#     listen 443 ssl;
-#     server_name play.ashtonoh.ms;
-
-#     ssl_certificate /etc/letsencrypt/live/play.ashtonoh.ms/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/play.ashtonoh.ms/privkey.pem;
-
-#     location / {
-#         proxy_pass http://flask_application;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header Host $host;
-#         proxy_redirect off;
-#     }
-# }
 
 # Recomma
 include /etc/letsencrypt/options-ssl-nginx.conf;
