--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,32 @@
 version: '3'
 services:
+  # Redis, cache used by Flask
+  redis:
+    image: "redis:alpine"
+
   # Flask application
   web:
     build: .
     expose:
       - "8000"
+    depends_on:
+      - redis
 
-  # Redis, cache used by Flask
-  redis:
-    image: "redis:alpine"
-
-  # Nginx, reverse proxy, provides SSDL  
+  # Frontend
   nginx:
-    build: ./nginx
+    image: staticfloat/nginx-certbot
     ports: 
-      - "80:80"
-      - "443:443"
+      - 80:80/tcp
+      - 443:443/tcp
     depends_on:
       - web
+    environment:
+      CERTBOT_EMAIL: ssl@ashtonoh.ms
+      ENVSUBST_VARS: FQDN # space-separated
+      FQDN: play.ashtonoh.ms
     volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
+      - ./nginx:/etc/nginx/user.conf.d:ro
+      - letsencrypt:/etc/letsencrypt
 
-  # Certbot, provides a LetsEncrypt certificate
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
+volumes:
+  letsencrypt:
