--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,4 +15,15 @@ server {
         proxy_set_header Host $host;
         proxy_redirect off;
     }
+
+    location /static/ {
+        auth_request /auth;
+        error_page 401 = @error401;
+
+        root /srv/static;
+    }
+
+    location @error401 {
+        return 302 /;
+    }
 }
