Fixing static auth

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,6 +16,14 @@ server {
         proxy_redirect off;
     }
 
+    location /auth {
+        internal;
+        proxy_pass http://flask_application/auth;
+        proxy_set_header Host $host;
+        proxy_set_header Content-Length "";
+        proxy_pass_request_body off;
+    }
+
     location /static/ {
         auth_request /auth;
         error_page 401 = @error401;
