--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,7 +28,8 @@ server {
         auth_request /auth;
         error_page 401 = @error401;
 
-        root /srv/static;
+        alias /srv/static/;
+        autoindex off;
     }
 
     location @error401 {
