--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,10 +25,15 @@ server {
     }
 
     location /static/ {
+        alias /srv/static/;
+        autoindex off;
+    }
+
+    location /media/ {
         auth_request /auth;
         error_page 401 = @error401;
 
-        alias /srv/static/;
+        alias /srv/media/;
         autoindex off;
     }
 
