--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,8 @@ server {
     listen      443 ssl;
     server_name ${FQDN};
 
+    client_max_body_size 1G;
+
     ssl_certificate     /etc/letsencrypt/live/${FQDN}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/${FQDN}/privkey.pem;
 
