--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,13 +3,25 @@ upstream flask_application {
 }
 
 server {
+    listen 80;
+    listen [::]:80;
+
+    location ~ /.well-known/acme-challenge {
+        allow all;
+        root /srv/certbot;
+    }
+
+    # TODO set https redirect
+}
+
+server {
     listen      443 ssl;
-    server_name ${FQDN};
+    server_name play.ashtonoh.ms;
 
     client_max_body_size 1G;
 
-    ssl_certificate     /etc/letsencrypt/live/${FQDN}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${FQDN}/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/play.ashtonoh.ms/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/play.ashtonoh.ms/privkey.pem;
 
     location / {
         proxy_pass http://flask_application;
@@ -18,6 +30,7 @@ server {
         proxy_redirect off;
     }
 
+    # Internal-only auth endpoint
     location /auth {
         internal;
         proxy_pass http://flask_application/auth;
@@ -26,13 +39,15 @@ server {
         proxy_pass_request_body off;
     }
 
+    # JS + CSS
     location /static/ {
         alias /srv/static/;
         autoindex off;
     }
 
+    # Videos + posters
     location /media/ {
-        auth_request /auth;
+        auth_request /auth; # Require auth
         error_page 401 = @error401;
 
         alias /srv/media/;
